# wg-bot

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml  init.sql
tests/: test_wg_admin.py
wg_admin/: client_config.template  config.py  db.py  main.py  models.py  schemas.py  wg_utils.py
wg_admin/crud/: user.py  wg_user.py
wg_admin/migrations/: env.py
wg_admin/migrations/versions/: 1e351e1f769d_added_user_table.py  b461010133c2_added_wg_user_table.py
wg_admin/wg_bot/: bot.py  kb.py
